--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Belief Base: {B | C, A & B}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sympy.logic.boolalg import And, Or, Not, Implies\n",
     "from sympy import symbols\n",
-    "from belief_agent import BeliefBase\n"
+    "from belief_agent import BeliefBase"
    ]
   },
   {
@@ -28,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {B | C, A & B}\n"
+      "Belief Base: {A & B, B | C}\n"
      ]
     }
    ],
