--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -35,6 +35,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A & B': 1, 'B | C': 1}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "belief_base.priorities"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
