to_CNF function implementation

--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -35,13 +35,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "belief_base.expand(Implies(C, A))\n",
+    "belief_base.expand(Not(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A & B': 1, 'B | C': 1}"
+       "{Implies(C, A), A & B, B | C, ~A}"
       ]
      },
      "execution_count": 4,
@@ -50,7 +60,30 @@
     }
    ],
    "source": [
-    "belief_base.priorities"
+    "belief_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A \\wedge B \\wedge \\neg A \\wedge \\left(A \\vee \\neg C\\right) \\wedge \\left(B \\vee C\\right)$"
+      ],
+      "text/plain": [
+       "A & B & ~A & (B | C) & (A | ~C)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "belief_base.to_CNF()"
    ]
   },
   {
