--- a/Project 2: Belief Agent/testing_overwriting.ipynb
+++ b/Project 2: Belief Agent/testing_overwriting.ipynb
@@ -76,6 +76,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = set((1,3,4,2,2))\n",
+    "b = list(a)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
