--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -2,88 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy.logic.boolalg import And, Or, Not, Implies\n",
+    "from sympy.logic.boolalg import And, Or, Not, Implies, Equivalent\n",
     "from sympy import symbols\n",
-    "from belief_agent import BeliefBase"
+    "from belief_agent_alena import BeliefBase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**KB: Robert does well in the exam if and only if he is prepared or lucky.**\n",
+    "Robert does not do well the exam.\n",
+    "\n",
+    "**Question: KB |= φ?**  **(KB entails phi)**\n",
+    "\n",
+    "1. (-r $\\vee$ p $\\vee$ s) $\\wedge$ (p $\\wedge$ r) $\\wedge$ (s $\\wedge$ r) $\\wedge$ $\\neg$ r, formalisation of KB as CNF.\n",
+    "\n",
+    "2.(-r $\\vee$ p $\\vee$ s) $\\wedge$ (p $\\wedge$ r) $\\wedge$ (s $\\wedge$ r) $\\wedge$ r $\\wedge$ p, CNF for contradiction.\n",
+    "\n",
+    "3. clauses:= (-r $\\vee$ p $\\vee$ s), (p $\\wedge$ r), (s $\\wedge$ r), r, p.\n",
+    "\n",
+    "4. clauses:=clauses U {r} from resolving (¬p $\\vee$ r) with p.\n",
+    "\n",
+    "5. clauses:=clauses U {1} from resolving r with $\\neg$ r.\n",
+    "\n",
+    "6. Result: empty clause, so KB |= φ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {A & B, B | C}\n"
+      "Belief Base: {~(p & r), p, r}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Example usage\n",
     "belief_base = BeliefBase()\n",
-    "A, B, C = symbols('A B C')\n",
-    "belief_base.expand(And(A, B))\n",
-    "belief_base.expand(Or(B, C))\n",
-    "print(\"Belief Base:\", belief_base)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "belief_base.expand(Implies(C, A))\n",
-    "belief_base.expand(Not(A))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{Implies(C, A), A & B, B | C, ~A}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "belief_base"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle A \\wedge B \\wedge \\neg A \\wedge \\left(A \\vee \\neg C\\right) \\wedge \\left(B \\vee C\\right)$"
-      ],
-      "text/plain": [
-       "A & B & ~A & (B | C) & (A | ~C)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "belief_base.to_CNF()"
+    "r, p, s = symbols('r p s')\n",
+    "belief_base.expand(Not(And(r, p))) # Robert does well iff he is prepared or lucky\n",
+    "belief_base.expand(r) # Robet does not do well\n",
+    "belief_base.expand(p)\n",
+    "print(\"Belief Base:\", belief_base)\n",
+    "belief_base.is_contradiction()"
    ]
   },
   {
