--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -35,21 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {p & r, ~(p & r), ~(Equivalent(p, r))}\n"
+      "Belief Base: {p, p & r, ~(Equivalent(p, r))}\n"
      ]
     }
    ],
    "source": [
     "belief_base = BeliefBase()\n",
     "r, p, s = symbols('r p s') # Robert does well iff he is prepared or lucky\n",
-    "belief_base.expand(Not(And(p,r)))\n",
+    "belief_base.expand(p)\n",
     "belief_base.expand(And(p,r))\n",
     "belief_base.expand(Not(Equivalent(p,r)))\n",
     "print(\"Belief Base:\", belief_base)\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,26 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p & r & (~p | ~r) & ((p & ~r) | (r & ~p))\n"
+      "p & r & ((p & ~r) | (r & ~p))\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle p \\wedge r \\wedge \\left(\\left(p \\wedge \\neg r\\right) \\vee \\left(r \\wedge \\neg p\\right)\\right) \\wedge \\left(\\neg p \\vee \\neg r\\right)$"
+       "$\\displaystyle p \\wedge r \\wedge \\left(\\left(p \\wedge \\neg r\\right) \\vee \\left(r \\wedge \\neg p\\right)\\right)$"
       ],
       "text/plain": [
-       "p & r & (~p | ~r) & ((p & ~r) | (r & ~p))"
+       "p & r & ((p & ~r) | (r & ~p))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,52 +117,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "En Not\n",
-      "En And\n",
-      "En Not\n",
-      "En And\n",
-      "En And\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import combinations\n",
     "formula = Not(And(p,r))\n",
     "cnf_formula = belief_base._convert_to_cnf(formula)\n",
     "belief_base_cnf = belief_base.to_CNF()\n",
     "new_set = And(belief_base_cnf, cnf_formula)\n",
-    "subsets = [c for r in range(2, len(new_set.args) + 1) for c in combinations(new_set.args, r)]"
+    "subsets = [c for r in range(1, len(new_set.args) + 1) for c in combinations(new_set.args, r)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(p, r),\n",
-       " (p, ~(p & r)),\n",
-       " (p, r | ~p),\n",
-       " (r, ~(p & r)),\n",
-       " (r, r | ~p),\n",
-       " (~(p & r), r | ~p),\n",
-       " (p, r, ~(p & r)),\n",
-       " (p, r, r | ~p),\n",
-       " (p, ~(p & r), r | ~p),\n",
-       " (r, ~(p & r), r | ~p),\n",
-       " (p, r, ~(p & r), r | ~p)]"
+       "[(p,),\n",
+       " (r,),\n",
+       " (~p | ~r,),\n",
+       " ((p & ~r) | (r & ~p),),\n",
+       " (p, r),\n",
+       " (p, ~p | ~r),\n",
+       " (p, (p & ~r) | (r & ~p)),\n",
+       " (r, ~p | ~r),\n",
+       " (r, (p & ~r) | (r & ~p)),\n",
+       " (~p | ~r, (p & ~r) | (r & ~p)),\n",
+       " (p, r, ~p | ~r),\n",
+       " (p, r, (p & ~r) | (r & ~p)),\n",
+       " (p, ~p | ~r, (p & ~r) | (r & ~p)),\n",
+       " (r, ~p | ~r, (p & ~r) | (r & ~p)),\n",
+       " (p, r, ~p | ~r, (p & ~r) | (r & ~p))]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,25 +165,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle p \\wedge r$"
+       "$\\displaystyle p \\wedge \\left(\\left(p \\wedge \\neg r\\right) \\vee \\left(r \\wedge \\neg p\\right)\\right) \\wedge \\left(\\neg p \\vee \\neg r\\right)$"
       ],
       "text/plain": [
-       "p & r"
+       "p & (~p | ~r) & ((p & ~r) | (r & ~p))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "And(*subsets[0])"
+    "And(*subsets[-3])"
    ]
   },
   {
@@ -214,38 +206,6 @@
     "print(b)\n",
     "print(b.is_Atom)\n",
     "print(b.args[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle r$"
-      ],
-      "text/plain": [
-       "r"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Look that we can get contradictions! we can use this for satisfability\n",
-    "print(And(p, False)) \n",
-    "Or(And(p, False), r)"
    ]
   },
   {
