--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sympy.logic.boolalg import And, Or, Not, Implies, Equivalent\n",
     "from sympy import symbols\n",
+    "from sympy.logic.inference import satisfiable\n",
+    "from itertools import combinations\n",
     "from belief_agent import BeliefBase"
    ]
   },
@@ -35,199 +37,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {p, p & r, ~(Equivalent(p, r))}\n"
+      "Belief Base: {r, p, Implies(p, ~r)}\n"
      ]
     }
    ],
    "source": [
     "belief_base = BeliefBase()\n",
-    "r, p, s = symbols('r p s') # Robert does well iff he is prepared or lucky\n",
-    "belief_base.expand(p)\n",
-    "belief_base.expand(And(p,r))\n",
-    "belief_base.expand(Not(Equivalent(p,r)))\n",
-    "print(\"Belief Base:\", belief_base)\n"
+    "symb = symbols('r p s') \n",
+    "r, p, s = symb\n",
+    "belief_base.expand(p) # Robert does well iff he is prepared or lucky\n",
+    "belief_base.expand(r) # Robert does not do well\n",
+    "belief_base.expand(Implies(p, Not(r)))\n",
+    "print(\"Belief Base:\", belief_base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = belief_base.to_CNF()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle p \\wedge r \\wedge \\left(\\neg p \\vee \\neg r\\right)$"
+      ],
       "text/plain": [
-       "False"
+       "p & r & (~p | ~r)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "And(a.args[0], a.args[1]) == Not(a.args[2])"
+    "belief_base.to_CNF()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "belief_base.check_entailment(Or(p,s)) # Check robert is not prepared is entailed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p & r & ((p & ~r) | (r & ~p))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle p \\wedge r \\wedge \\left(\\left(p \\wedge \\neg r\\right) \\vee \\left(r \\wedge \\neg p\\right)\\right)$"
-      ],
-      "text/plain": [
-       "p & r & ((p & ~r) | (r & ~p))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(belief_base._convert_to_cnf(a))\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations\n",
-    "formula = Not(And(p,r))\n",
-    "cnf_formula = belief_base._convert_to_cnf(formula)\n",
-    "belief_base_cnf = belief_base.to_CNF()\n",
-    "new_set = And(belief_base_cnf, cnf_formula)\n",
-    "subsets = [c for r in range(1, len(new_set.args) + 1) for c in combinations(new_set.args, r)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(p,),\n",
-       " (r,),\n",
-       " (~p | ~r,),\n",
-       " ((p & ~r) | (r & ~p),),\n",
-       " (p, r),\n",
-       " (p, ~p | ~r),\n",
-       " (p, (p & ~r) | (r & ~p)),\n",
-       " (r, ~p | ~r),\n",
-       " (r, (p & ~r) | (r & ~p)),\n",
-       " (~p | ~r, (p & ~r) | (r & ~p)),\n",
-       " (p, r, ~p | ~r),\n",
-       " (p, r, (p & ~r) | (r & ~p)),\n",
-       " (p, ~p | ~r, (p & ~r) | (r & ~p)),\n",
-       " (r, ~p | ~r, (p & ~r) | (r & ~p)),\n",
-       " (p, r, ~p | ~r, (p & ~r) | (r & ~p))]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "subsets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle p \\wedge \\left(\\left(p \\wedge \\neg r\\right) \\vee \\left(r \\wedge \\neg p\\right)\\right) \\wedge \\left(\\neg p \\vee \\neg r\\right)$"
-      ],
-      "text/plain": [
-       "p & (~p | ~r) & ((p & ~r) | (r & ~p))"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "And(*subsets[-3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~(p & r)\n",
-      "False\n",
-      "p & r\n"
+      "[(True, True, True), (True, True, False), (True, False, True), (True, False, False), (False, True, True), (False, True, False), (False, False, True), (False, False, False)]\n",
+      "8\n"
      ]
     }
    ],
    "source": [
-    "b = a.args[1]\n",
-    "print(b)\n",
-    "print(b.is_Atom)\n",
-    "print(b.args[0])"
+    "from itertools import product\n",
+    "\n",
+    "def generate_combinations(n):\n",
+    "    return list(product([True, False], repeat=n))\n",
+    "\n",
+    "# Example usage:\n",
+    "n = 3\n",
+    "combinations = generate_combinations(n)\n",
+    "print(combinations)\n",
+    "print(len(combinations))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle p$"
-      ],
-      "text/plain": [
-       "p"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
