--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sympy.logic.boolalg import And, Or, Not, Implies, Equivalent\n",
-    "from sympy import symbols\n",
+    "from sympy import symbols, bool_map\n",
     "from sympy.logic.inference import satisfiable\n",
     "from itertools import combinations\n",
-    "from belief_agent import BeliefBase"
+    "from belief_agent import BeliefBase\n",
+    "from math import factorial"
    ]
   },
   {
@@ -37,95 +38,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {r, p, Implies(p, ~r)}\n"
+      "Belief Base: {s, p, r}\n"
      ]
     }
    ],
    "source": [
-    "belief_base = BeliefBase()\n",
-    "symb = symbols('r p s') \n",
+    "belief_base = BeliefBase('r p s')\n",
+    "symb = belief_base.symbols\n",
     "r, p, s = symb\n",
-    "belief_base.expand(p) # Robert does well iff he is prepared or lucky\n",
-    "belief_base.expand(r) # Robert does not do well\n",
-    "belief_base.expand(Implies(p, Not(r)))\n",
+    "\n",
+    "belief_base.expand(p)\n",
+    "belief_base.expand(r)\n",
+    "belief_base.expand(s)\n",
     "print(\"Belief Base:\", belief_base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle p \\wedge r \\wedge \\left(\\neg p \\vee \\neg r\\right)$"
-      ],
-      "text/plain": [
-       "p & r & (~p | ~r)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "belief_base.to_CNF()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[(True, True, True),\n",
+       " (True, True, False),\n",
+       " (True, False, True),\n",
+       " (True, False, False),\n",
+       " (False, True, True),\n",
+       " (False, True, False),\n",
+       " (False, False, True),\n",
+       " (False, False, False)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "belief_base.check_entailment(Or(p,s)) # Check robert is not prepared is entailed"
+    "belief_base.possible_symbol_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{r: True, p: True}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictionary = {symb[i]: combinations[0][i] for i in range(len(symb))}\n",
+    "dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{p: False, r: True}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "satisfiable(belief_base.to_CNF())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(True, True, True), (True, True, False), (True, False, True), (True, False, False), (False, True, True), (False, True, False), (False, False, True), (False, False, False)]\n",
-      "8\n"
+      "{r: False, p: True}\n",
+      "(False, True)\n",
+      "priority: 2\n"
      ]
     }
    ],
    "source": [
-    "from itertools import product\n",
+    "sat = satisfiable(And(Or(p, r), Not(r)))\n",
+    "print(sat)\n",
+    "print(tuple([sat[symb[i]] for i in range(len(symb))]))\n",
+    "key = tuple([sat[symb[i]] for i in range(len(symb))])\n",
+    "print(\"priority:\", belief_base.priorities[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(True, True): 0, (True, False): 1, (False, True): 2, (False, False): 3}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "belief_base.priorities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = set((1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = a.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "def total_node_number(n):\n",
+    "    result = 0\n",
+    "    for i in range(2, n + 1):\n",
+    "        product = 1\n",
+    "        for k in range(i, n + 1):\n",
+    "            product *= k\n",
+    "        result += product\n",
+    "    return result\n",
     "\n",
-    "def generate_combinations(n):\n",
-    "    return list(product([True, False], repeat=n))\n",
+    "print(total_node_number(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neighbours(beliefs: set):\n",
+    "    if len(beliefs) == 1:\n",
+    "        return None\n",
     "\n",
-    "# Example usage:\n",
-    "n = 3\n",
-    "combinations = generate_combinations(n)\n",
-    "print(combinations)\n",
-    "print(len(combinations))\n"
+    "    elif len(beliefs) > 1:\n",
+    "        neigh = []\n",
+    "        for clause in beliefs:\n",
+    "            new_set = beliefs.copy()\n",
+    "            new_set.remove(clause)\n",
+    "            neigh.append(new_set)\n",
+    "        return neigh\n",
+    "\n",
+    "def create_graph(belief_set):\n",
+    "    graph = dict()\n",
+    "    total_nodes_in_max_depth = factorial(len(belief_set))\n",
+    "    counter = 0\n",
+    "    current_set = belief_set\n",
+    "    while counter <= total_nodes_in_max_depth:\n",
+    "        neigh = neighbours(current_set)\n",
+    "        if neigh is None:\n",
+    "            counter += 1\n",
+    "    \n",
+    "        else:\n",
+    "            graph[tuple(current_set)] = neigh\n",
+    "            counter += 1\n",
+    "            current_set = neigh[0]  # Here you might want to choose the first neighbor to continue the exploration\n",
+    "    print(f\"Out of loop after {counter} iterations\")\n",
+    "    return graph\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of loop after 7 iterations\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(s, p, r): [{p, r}, {r, s}, {p, s}], (p, r): [{r}, {p}]}"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import factorial\n",
+    "\n",
+    "belief_set = belief_base.beliefs\n",
+    "graph = create_graph(belief_set)\n",
+    "graph\n"
    ]
   },
   {
