--- a/Project 2: Belief Agent/AGM_postulates.ipynb
+++ b/Project 2: Belief Agent/AGM_postulates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,122 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: {s, p, r}\n"
+      "Belief Base: {q, p, q | ~p}\n"
      ]
     }
    ],
    "source": [
-    "belief_base = BeliefBase('r p s')\n",
+    "belief_base = BeliefBase('q p')\n",
     "symb = belief_base.symbols\n",
-    "r, p, s = symb\n",
+    "q, p = symb\n",
     "\n",
     "belief_base.expand(p)\n",
-    "belief_base.expand(r)\n",
-    "belief_base.expand(s)\n",
+    "belief_base.expand(q)\n",
+    "belief_base.expand(Implies(p, q))\n",
     "print(\"Belief Base:\", belief_base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(True, True, True),\n",
-       " (True, True, False),\n",
-       " (True, False, True),\n",
-       " (True, False, False),\n",
-       " (False, True, True),\n",
-       " (False, True, False),\n",
-       " (False, False, True),\n",
-       " (False, False, False)]"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "belief_base.possible_symbol_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{r: True, p: True}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dictionary = {symb[i]: combinations[0][i] for i in range(len(symb))}\n",
-    "dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{p: False, r: True}"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "satisfiable(belief_base.to_CNF())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{r: False, p: True}\n",
-      "(False, True)\n",
-      "priority: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "sat = satisfiable(And(Or(p, r), Not(r)))\n",
-    "print(sat)\n",
-    "print(tuple([sat[symb[i]] for i in range(len(symb))]))\n",
-    "key = tuple([sat[symb[i]] for i in range(len(symb))])\n",
-    "print(\"priority:\", belief_base.priorities[key])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +71,7 @@
        "{(True, True): 0, (True, False): 1, (False, True): 2, (False, False): 3}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,130 +82,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = set((1,2))"
+    "satisf = satisfiable(belief_base.to_CNF())\n",
+    "key = tuple([satisf[belief_base.symbols[i]] for i in range(len(belief_base.symbols))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = a.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[149], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbelief_base\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpriorities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
      ]
     }
    ],
    "source": [
-    "print(b.pop())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n"
-     ]
-    }
-   ],
-   "source": [
-    "def total_node_number(n):\n",
-    "    result = 0\n",
-    "    for i in range(2, n + 1):\n",
-    "        product = 1\n",
-    "        for k in range(i, n + 1):\n",
-    "            product *= k\n",
-    "        result += product\n",
-    "    return result\n",
-    "\n",
-    "print(total_node_number(4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def neighbours(beliefs: set):\n",
-    "    if len(beliefs) == 1:\n",
-    "        return None\n",
-    "\n",
-    "    elif len(beliefs) > 1:\n",
-    "        neigh = []\n",
-    "        for clause in beliefs:\n",
-    "            new_set = beliefs.copy()\n",
-    "            new_set.remove(clause)\n",
-    "            neigh.append(new_set)\n",
-    "        return neigh\n",
-    "\n",
-    "def create_graph(belief_set):\n",
-    "    graph = dict()\n",
-    "    total_nodes_in_max_depth = factorial(len(belief_set))\n",
-    "    counter = 0\n",
-    "    current_set = belief_set\n",
-    "    while counter <= total_nodes_in_max_depth:\n",
-    "        neigh = neighbours(current_set)\n",
-    "        if neigh is None:\n",
-    "            counter += 1\n",
-    "    \n",
-    "        else:\n",
-    "            graph[tuple(current_set)] = neigh\n",
-    "            counter += 1\n",
-    "            current_set = neigh[0]  # Here you might want to choose the first neighbor to continue the exploration\n",
-    "    print(f\"Out of loop after {counter} iterations\")\n",
-    "    return graph\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of loop after 7 iterations\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{(s, p, r): [{p, r}, {r, s}, {p, s}], (p, r): [{r}, {p}]}"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from math import factorial\n",
-    "\n",
-    "belief_set = belief_base.beliefs\n",
-    "graph = create_graph(belief_set)\n",
-    "graph\n"
+    "belief_base.priorities(key)"
    ]
   },
   {
