--- a/Project 2: Belief Agent/try_n_error.ipynb
+++ b/Project 2: Belief Agent/try_n_error.ipynb
@@ -115,16 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{q | ~p, q, p}\n",
+      "{q | ~p, q, p | q, p}\n",
       "\n",
       " Contraction:\n",
+      "\n",
+      "is_belief_entailed == True?? False\n",
+      "belief: p | q   is belief entailed?: {p: True, q: False}\n",
+      "Belief to be removed: p | q\n",
       "\n",
       "is_belief_entailed == True?? False\n",
       "belief: q | ~p   is belief entailed?: {p: False, q: False}\n",
@@ -176,7 +180,7 @@
     "                    belief_not_entailed = satisfiable(And(Not(extract_belief), belief))\n",
     "                    print(\"\\nis_belief_entailed == True??\", belief_not_entailed == True)\n",
     "                    print(\"belief:\",belief, \"  is belief entailed?:\", belief_not_entailed)\n",
-    "                    if belief_not_entailed != False:\n",
+    "                    if belief_not_entailed != False: # \n",
     "                        print(\"Belief to be removed:\", belief)\n",
     "                        self.remove(belief)\n",
     "                        sorted_beliefs.remove((to_cnf(belief), pri))\n",
@@ -208,6 +212,7 @@
     "    belief_base.expand(p, 1)\n",
     "    belief_base.expand(q, 2)\n",
     "    belief_base.expand(Implies(p, q), 3)\n",
+    "    belief_base.expand(Or(p, q), 4)\n",
     "    print(belief_base.beliefs)\n",
     "    \n",
     "    print(\"\\n Contraction:\")\n",
