the end of yorha

--- a/Project 2: Belief Agent/try_n_error.ipynb
+++ b/Project 2: Belief Agent/try_n_error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Belief Base: <belief_agent.BeliefBase object at 0x119175910>\n"
+      "Belief Base: <belief_agent.BeliefBase object at 0x110188d30>\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{p, q, q | ~p}\n",
+      "{q, p, q | ~p}\n",
       "\n",
       "Final belief base:\n",
       "{q | ~p}\n"
@@ -124,7 +124,6 @@
     "    def contract(self, extract_belief):\n",
     "        sorted_beliefs = sorted(self.beliefs_priorities, key=lambda x: (-x[1]))\n",
     "        \n",
-    "        # Might be and IF instead of while\n",
     "        while self.check_entailment(extract_belief):\n",
     "            entailed_formulas = []\n",
     "            all_subsets = generate_all_subsets(self.beliefs)\n",
@@ -141,7 +140,6 @@
     "                        formula_to_remove = formula\n",
     "            self.remove(formula_to_remove)\n",
     "                        \n",
-    "\n",
     "    def revise(self, belief):\n",
     "        # Levi's identity\n",
     "        self.contract(Not(belief))\n",
